@@ -1,5 +1,26 @@
-FROM eclipse-temurin:17-jdk-alpine
+# =========================
+# Build stage
+# =========================
+FROM maven:3.9.9-eclipse-temurin-21 AS build
+
 WORKDIR /app
-COPY target/*.jar app.jar
+
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+COPY src ./src
+
+RUN mvn clean package -DskipTests
+
+# =========================
+# Run stage
+# =========================
+FROM eclipse-temurin:21-jre
+
+WORKDIR /app
+
+COPY --from=build /app/target/trackee-*.jar app.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app.jar"]
+
+ENTRYPOINT ["java", "-XX:+UseZGC", "-XX:MaxRAMPercentage=75", "-jar", "app.jar"]
